--- a/imports/ui/components/admin.users/admin.users.html
+++ b/imports/ui/components/admin.users/admin.users.html
@@ -1,28 +1,44 @@
 <div class="container">
-    <div class="section">
-        <ul class="collection with-header">
-            <li class="collection-header"><h4>Durchschnitt</h4></li>
-            <li class="collection-item">
-                <canvas id="chart-average">
+    <div class="card">
+        <div class="card-content">
+            <h2>Auswertung Gruppen</h2>
+            <ul class="collapsible" data-collapsible="accordion">
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">filter_drama</i>Filter</div>
+                    <div class="collapsible-body">
+                        <div class="input-normal input-field col s4 m5 l5">
+                            <select ng-options="fokus._id as fokus.fokus for fokus in $ctrl.fokus"
+                                    ng-model="$ctrl.newFokus" ng-required="true" ng-change="$ctrl.filter({newFokus: $ctrl.newFokus, newCluster: $ctrl.newCluster})">
+                                <option value="">Alle</option>
+                            </select>
+                            <label>Fokus</label>
+                        </div>
+                        <div class="input-normal input-field col s6 m6 l6">
+                            <select ng-options="cluster._id as cluster.cluster for cluster in $ctrl.clusters"
+                                    ng-model="$ctrl.newCluster" ng-required="true" ng-change="$ctrl.filter({newFokus: $ctrl.newFokus, newCluster: $ctrl.newCluster})">
+                                <option value="">Alle</option>
+                            </select>
+                            <label>Cluster</label>
+                        </div>
+                    </div>
 
-                </canvas>
-            </li>
-        </ul>
-        <ul class="collection with-header">
-            <li class="collection-header"><h4>Users</h4></li>
-            <li class="collection-item" ng-repeat="user in $ctrl.users">
-                <div class="row">
-                    <div class="col s8 m10 l10">
-                        {{user.emails[0].address}}
-                        {{user}}
+                </li>
+            </ul>
+            <div class="input-field">
+                <i class="material-icons prefix">search</i>
+                <input class="input-normal" placeholder="Search" id="search" type="text"
+                       ng-model="search">
+            </div>
+            <ul class="collapsible" data-collapsible="accordion">
+                <li ng-repeat="institut in $ctrl.institut | filter: search" ng-click="$ctrl.getInstitut(institut._id)">
+                    <div class="collapsible-header"><i class="material-icons">filter_drama</i>{{institut.institut}}</div>
+                    <div class="collapsible-body">
+                        <canvas id="polar-area" class="chart chart-polar-area"
+                                chart-data="$ctrl.dataField" chart-labels="$ctrl.categoriesField">
+                        </canvas>
                     </div>
-                    <div class="col s4 m2 l2 center-align">
-                        <button class="btn btn-large" ng-click="$ctrl.view(user)">
-                            <i class="material-icons">search</i>
-                        </button>
-                    </div>
-                </div>
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
